--- a/Admin.css
+++ b/Admin.css
@@ -2,11 +2,11 @@ body {
     font-family: sans-serif;
     margin: 0;
     padding: 20px;
-    background-color: #e8f5e9; 
+    background-color: hsl(0, 0%, 94%); 
   }
   
   header {
-    background-color: #d7e8da; 
+    background-color: #4CAF50; 
     padding: 20px;
     border-radius: 5px;
     margin-bottom: 20px;
@@ -16,7 +16,7 @@ body {
   h1 {
     font-size: 2em;
     margin: 0;
-    color: #336633; 
+    color: white;
   }
   
   main {
@@ -30,12 +30,12 @@ body {
     display: flex;
     flex-direction: column;
     gap: 10px;
-    width: 400px;
-    margin: auto; /*added*/
+    width: 400px; 
     padding: 20px;
     border: 1px solid #d7e8da;
     border-radius: 5px;
-    background-color: #ebeef2; 
+    background-color: #fff; /* White container */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Subtle shadow */
   }
   
   h2 {
@@ -48,14 +48,34 @@ body {
     color: #336633; 
   }
   
-  select, input[type="number"], input[type="url"], input[type = "password"], input[type = "text"] {
+  select, input[type="url"], input[type = "password"], input[type = "text"] {
     padding: 10px;
     border: 1px solid #ccc;
     border-radius: 5px;
     width: 95%; 
     margin-bottom: 10px;
   }
-  
+  select, input[type="number"]{
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    width: 60%; 
+    margin-bottom: 10px;
+  }
+  #ok {
+    background-color: #94d267; 
+    color: white;
+    padding: 9px 0px;
+    border: none;
+    border-radius: 5px;
+    height: 35px;
+    width: 35px;
+    cursor: pointer;
+    transition: 0.3s;
+  }
+  #ok:hover {
+    background-color: #79b34d; 
+  }
   button {
     background-color: #94d267; 
     color: white;
